--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-query": "^3.34.12",
+    "react-use": "^17.3.2",
     "recoil": "^0.5.2"
   },
   "devDependencies": {
